# serializer version: 1
# name: test_fan_device_state[tests/fixtures/fan-off.yaml]
  tuple(
    'off',
    ReadOnlyDict({
      'friendly_name': 'Counter Fan',
      'oscillating': False,
      'percentage': 0,
      'percentage_step': 1.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature.SET_SPEED|OSCILLATE|TURN_OFF|TURN_ON: 51>,
    }),
  )
# ---
# name: test_fan_device_state[tests/fixtures/fan-on.yaml]
  tuple(
    'on',
    ReadOnlyDict({
      'friendly_name': 'Counter Fan',
      'oscillating': False,
      'percentage': 100,
      'percentage_step': 1.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature.SET_SPEED|OSCILLATE|TURN_OFF|TURN_ON: 51>,
    }),
  )
# ---
# name: test_fan_device_state[tests/fixtures/fan-oscillating.yaml]
  tuple(
    'on',
    ReadOnlyDict({
      'friendly_name': 'Counter Fan',
      'oscillating': True,
      'percentage': 100,
      'percentage_step': 1.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature.SET_SPEED|OSCILLATE|TURN_OFF|TURN_ON: 51>,
    }),
  )
# ---
